<resources>
    <string name="app_name">Mobilia</string>
    <string name="title_home">Home</string>
    <string name="title_shops">Shops</string>
    <string name="title_offers">Offers</string>

    <string name="progress_dialog_message">Loading...</string>
    <string name="error">Error</string>
    <string name="all_categories">All</string>

    <string name="key_shop_about">key_shop_detail_about</string>
    <string name="key_shop_offers">key_shop_detail_offers</string>



    //content descriptions
    <string name="cd_logo">Mobilia Logo</string>
    <string name="cd_main_toolbar">Main Toolbar</string>
    <string name="cd_widget_toolbar">Mobilia Offers Widget Toolbar</string>
    <string name="cd_widget_toolbar_title">Mobilia Offers Widget Toolbar title</string>
    <string name="cd_widget_offers_List">Mobilia Offers Widget List</string>

    <string name="cd_categories_list">Categories List</string>
    <string name="cd_furniture_list">Furniture List</string>
    <string name="cd_shops_list">Shops List</string>
    <string name="cd_offers_list">Offers List</string>

    <string name="cd_item_category">category</string>
    <string name="cd_item_furniture">Furniture</string>
    <string name="cd_item_furniture_title">furniture title</string>
    <string name="cd_item_furniture_img">furniture Image</string>
    <string name="cd_item_furniture_shop_title">furniture shop title</string>
    <string name="cd_item_furniture_shop_image">furniture shop image</string>

    <string name="cd_item_Shop">shop</string>
    <string name="cd_item_Shop_image">shop image</string>
    <string name="cd_item_Shop_title">shop title</string>
    <string name="cd_item_Shop_phone">shop phone</string>

    <string name="cd_item_offer">offer</string>
    <string name="cd_item_offer_shop_img">Shop Image</string>
    <string name="cd_item_offer_shop_title">Shop Title</string>
    <string name="cd_item_offer_img">Offer Image</string>
    <string name="cd_item_offer_title">Offer Title</string>

    <string name="cd_shop_about">about shop</string>
    <string name="cd_shop_about_tab">About Shop Tab</string>
    <string name="cd_shop_offers_tab">Shop Offers Tab</string>

    <string name="cd_offer_body">Offer Body</string>
    <string name="cd_furniture_body">Offer Body</string>


    //null fragment messages
    <string name="null_fragment_furniture">Select a Furniture</string>
    <string name="null_fragment_shop">Select a Shop</string>
    <string name="null_fragment_offer">Select an Offer</string>


    //widget
    <string name="widget_title">Mobilia Offers</string>
    <string name="widget_open_app">launch the Mobilia to get offers</string>

    //Database Keys
    <string name="fb_categories" translatable="false">categories</string>
    <string name="fb_furniture" translatable="false">furniture</string>
    <string name="fb_offers" translatable="false">offers</string>
    <string name="fb_shops" translatable="false">shops</string>

    <string name="fb_body" translatable="false">body</string>
    <string name="fb_category" translatable="false">category</string>
    <string name="fb_img" translatable="false">img</string>
    <string name="fb_shop" translatable="false">shop</string>
    <string name="fb_title" translatable="false">title</string>
    <string name="fb_about" translatable="false">about</string>
    <string name="fb_phone" translatable="false">phone</string>
    <string name="fb_website" translatable="false">website</string>

    //shop details strings
    <string name="shop_call">Call</string>
    <string name="shop_website">Visit Website</string>
    <string name="shop_about">About </string>
    <string name="shop_offers">Offers</string>
    <string name="shop_invalid_website">Invalid Web Site</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    //transition names
    <string name="trans_furniture_img" translatable="false">trans_furniture_img</string>
    <string name="trans_furniture_shop_img" translatable="false">trans_furniture_shop_img</string>
    <string name="trans_furniture_shop_title" translatable="false">trans_furniture_shop_title</string>
    <string name="trans_shop_title" translatable="false">trans_shop_title</string>
    <string name="trans_shop_img" translatable="false">trans_shop_img</string>


</resources>
