<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:elevation="8dp"
        android:contentDescription="@string/cd_widget_toolbar"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="48dp"
            android:contentDescription="@string/cd_logo"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:src="@drawable/logo"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="18dp"
            android:layout_marginLeft="16dp"
            android:text="@string/widget_title"
            android:contentDescription="@string/cd_widget_toolbar_title"
            android:textColor="@color/white"
            />
    </LinearLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/cd_widget_offers_List"
            android:id="@+id/widget_list"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/widget_placeholder"
            android:gravity="center"
            android:minHeight="28dp"
            android:layout_gravity="center">
            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:textColor="@color/colorAccent"
                android:layout_marginEnd="8dp"
                android:textSize="16dp"
                android:text="@string/widget_open_app"/>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>