<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:contentDescription="@string/cd_item_furniture"
    android:elevation="2dp"
    android:foreground="?android:attr/selectableItemBackgroundBorderless"
    app:cardCornerRadius="2dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_furniture_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_item_furniture_img"
            android:scaleType="centerCrop"
            android:transitionName="@string/trans_furniture_img"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/item_furniture_shop_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/cd_item_furniture_shop_image"
            android:transitionName="@string/trans_furniture_shop_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_furniture_title"
            fresco:failureImage="@color/f_error"
            fresco:placeholderImage="@color/f_loading"
            fresco:roundAsCircle="true"
            fresco:roundingBorderColor="@color/colorAccent"
            fresco:roundingBorderWidth="1dp" />

        <TextView
            android:id="@+id/item_furniture_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/cd_item_furniture_title"
            android:ellipsize="marquee"
            android:maxLines="2"
            android:textAlignment="textStart"
            android:textColor="@color/primary_text"
            android:textSize="18dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_furniture_image"
            tools:text="JJJJJJJJJJJJJJJ" />

        <TextView
            android:id="@+id/item_furniture_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/cd_item_furniture_shop_title"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:maxWidth="85dp"
            android:textColor="@color/secondary_text"
            android:textSize="14dp"
            android:transitionName="@string/trans_furniture_shop_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/item_furniture_shop_image"
            app:layout_constraintRight_toRightOf="@+id/item_furniture_title"
            app:layout_constraintTop_toBottomOf="@+id/item_furniture_title"
            tools:text="JJJJJJJJJJJJJJJ" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>