<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/widget_list_item"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/background_gray" />

    <TextView
        android:id="@+id/item_widget_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/cd_item_offer_shop_title"
        android:ellipsize="marquee"
        android:maxLines="1"
        android:maxWidth="200dp"
        android:textColor="@color/secondary_text"
        android:textSize="14dp"
        tools:text="JJJJJJJJJJJJJJJ" />

    <ImageView
        android:id="@+id/item_widget_img"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/cd_item_offer_img"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/item_widget_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/cd_item_offer_title"
        android:ellipsize="marquee"
        android:maxLines="1"
        android:maxWidth="200dp"
        android:textAlignment="textStart"
        android:textColor="@color/primary_text"
        android:textSize="18dp"
        tools:text="JJJJJJJJJJJJJJJ" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/background_gray" />

</LinearLayout>