<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_offer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="4dp"
    android:contentDescription="@string/cd_item_offer"
    android:layout_marginRight="4dp"
    android:elevation="2dp"
    android:foreground="?android:attr/selectableItemBackgroundBorderless"
    app:cardCornerRadius="2dp">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/item_offer_shop_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/cd_item_offer_img"
        android:layout_marginTop="8dp"
        fresco:placeholderImage="@color/f_loading"
        fresco:failureImage="@color/f_error"
        fresco:roundAsCircle="true"
        fresco:roundingBorderColor="@color/colorPrimary"
        fresco:roundingBorderWidth="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_offer_shop_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_item_offer_shop_title"
        android:maxWidth="200dp"
        android:maxLines="1"
        android:ellipsize="marquee"
        android:textColor="@color/secondary_text"
        android:textSize="14dp"
        tools:text="JJJJJJJJJJJJJJJ"
        app:layout_constraintTop_toTopOf="@+id/item_offer_shop_image"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/item_offer_shop_image"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toRightOf="@+id/item_offer_shop_image"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <ImageView
        android:id="@+id/item_offer_img"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:contentDescription="@string/cd_item_offer_img"
        android:scaleType="centerCrop"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/item_offer_shop_image"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/item_offer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_item_offer_title"
        android:textAlignment="textStart"
        android:textSize="18dp"
        android:textColor="@color/primary_text"
        android:maxLines="1"
        android:maxWidth="200dp"
        android:ellipsize="marquee"
        tools:text="JJJJJJJJJJJJJJJ"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/item_offer_img"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />
</android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>